--- a/_posts/2019-04-01-Hello-2019.md
+++ b/_posts/2019-04-01-Hello-2019.md
@@ -4,7 +4,7 @@ title: Hello 2019 愚人节
 subtitle: "\"Hello World, Hello Blog\""
 date: 2019-04-01
 author: Sheldor
-header-img: img/post-bg-2015.jpg
+header-img: img/post/post_bg_20190401.jpg
 catalog: true
 tags:
 - 生活
