--- a/_posts/2019-04-01-Hello-2019.md
+++ b/_posts/2019-04-01-Hello-2019.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Hello 2019 愚人节
-subtitle: "\"Hello World, Hello Blog\""
+subtitle: "\"写成自己的一些话\""
 date: 2019-04-01
 author: Sheldor
 header-img: img/post/post_bg_20190401.jpg
