--- a/_posts/2019-04-01-Hello-2019.md
+++ b/_posts/2019-04-01-Hello-2019.md
@@ -23,7 +23,7 @@ tags:
 
 现在的你，在经历一段充满压力与离别的时刻。在一起住了6年的大学室友兼工作室友要回去了，2年前，她曾鼓励你从徐州来到上海开始一段未知的旅程，如今她要回去了，你还是要咬牙在上海生存下去。
 
-你现在的工作，你并不喜爱，你说是为了不让资金链断裂，可是，真正要离开的原因，或许你也并不那么清楚。你在看似努力的寻找一份新的工作，大概也只是为了成为别人眼中那个及时止损的人，你真正在想些什么，你总是不去认证看清。
+你现在的工作，你并不喜爱，你说是为了不让资金链断裂，可是，真正要离开的原因，或许你也并不那么清楚。你在看似努力的寻找一份新的工作，大概也只是为了成为别人眼中那个及时止损的人，你真正在想些什么，你总是不去认真看清。
 
 到现在，25岁了，还没有谈过一次恋爱。你总是在口头上面拼命说自己想谈一场甜甜的恋爱，可是爱情是什么呢？你从不相信爱情的永恒，不如直接发展成亲情更实际一点。
 
@@ -47,7 +47,7 @@ tags:
 
 每个人的生活，都有自己的节奏，不要总是憧憬着别人的成功，埋怨自己的失败。
 
-要相信，天道酬勤，希望你用憧憬别人的时间来好好充实自己，累了就休息，休息好了就继续，路总在脚下，怎样都是风景。你是一个喜欢想太多的人，我只希望你不要把自己逼得那么急。
+要相信，天道酬勤，希望你用憧憬别人的时间来好好充实自己，累了就休息，休息好了就继续，路总在脚下，怎样都是风景。你是一个喜欢想太多的人，我只希望你不要把自己逼得那么紧。
 
 就像你一直喜欢的那首歌一样：
 
